# CppDefense

./: CMakeLists.txt  README.md
apps/cli/: main.cpp
include/cpp_defense/core/: cli_options.hpp  function_info.hpp
include/cpp_defense/ui/: cli_app.hpp  command_parser.hpp
src/ui/: cli_app.cpp  command_parser.cpp
